# MQ-Browser

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: generate_icon.py
shared/: locale.ts  theme.ts  types.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: amqp.rs  connections.rs  files.rs  management.rs  messages.rs  mod.rs
src/components/: AboutDialog.tsx  CommandPalette.tsx  CopyButton.tsx  Drawer.tsx  EmptyState.tsx  InfoIcon.tsx  LanguageSwitcher.tsx  Modal.tsx  Select.tsx  SortableTh.tsx  ToastViewport.tsx
src/components/mq/: AdminPanel.tsx  AutoRefreshControl.tsx  BindingList.tsx  ChannelList.tsx  ConnectionDialog.tsx  ConnectionList.tsx  ConnectionSidebar.tsx  ConsumerList.tsx  CreateBindingDialog.tsx  CreateExchangeDialog.tsx  CreateQueueDialog.tsx  DefinitionsDialog.tsx  DiagnosticsPanel.tsx  EntityDrillDrawer.tsx  ExchangeDetailDrawer.tsx  ExchangeList.tsx  MessageBodyViewer.tsx  NodeList.tsx  (+8 more)
src/context/: WorkspaceContext.tsx
src/hooks/: useGlobalShortcuts.ts
src/i18n/: i18n.ts
src/lib/: csv.ts  demoCore.ts  exchangeRk.ts  sort.ts  tauri.ts  validation.ts
src/locales/: en.json  zh-CN.json
src/stores/: connectionsStore.ts  publishTemplatesStore.ts  toastStore.ts  topologyStore.ts  uiPrefsStore.ts  workspaceUiStore.ts
src/theme/: ThemeProvider.tsx
(+2 files in other folders)
