[package]
name = "mq-browser"
version = "0.1.0"
description = "MQ Browser — Tauri + TS desktop app to manage RabbitMQ"
authors = ["Guo's"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "mq_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
lapin = "2"
futures-lite = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
